add all styles and all first tasks

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,11 @@
 @import-normalize; /* bring in normalize.css styles */
 
+::-webkit-scrollbar {
+  /* chrome based */
+  width: 0px; /* ширина scrollbar'a */
+  background: transparent; /* опционально */
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
